@@ -2,48 +2,21 @@ package it.unicam.cs.paduraru.engine;
 import it.unicam.cs.paduraru.engine.spacebots.api.components.PCollider;
 import it.unicam.cs.paduraru.engine.spacebots.api.components.PColliderGeneric;
 import it.unicam.cs.paduraru.engine.spacebots.api.shapes.PCircle;
-import it.unicam.cs.paduraru.engine.spacebots.api.systems.SysCollision;
+import it.unicam.cs.paduraru.engine.spacebots.api.shapes.PShape;
+import it.unicam.cs.paduraru.engine.spacebots.api.systems.PSysCollision;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
 public final class GameController {
-
-    public static PEnvironment DefaultEnvironment;
     static List<PEnvironment> environments = new ArrayList<>();
     static List<List<PEnvironment>> history = new ArrayList<>();
     static int currentEnvironment;
 
-    private GameController(){};
-    public static void Initialize(){
-        for (PEnvironment env: environments)
-            env.initialize();
-    }
-
-    public static void createEnvironment() {
-        environments.add(new PEnvironment());
-    }
-    public static void createEnvironment(PEnvironment defaultEnvironment) {
-        environments.add(defaultEnvironment);
-    }
-
-
-    public static void changeEnvironment(int idEnv) throws Exception {
-        if(idEnv >= environments.stream().count())
-            throw new Exception("Environment not exists");
-
-        currentEnvironment = idEnv;
-
-    }
-
-    public static void stepForwardCurrentEnvironment() throws Exception {
+    public static void stepForwardCurrentEnvironment(){
         history.get(currentEnvironment).add((PEnvironment)environments.get(currentEnvironment).deepCopy());
         environments.get(currentEnvironment).run();
-    }
-
-    public static List<PEntity> GetCurrentEntities() {
-        return environments.get(currentEnvironment).getEntities();
     }
 
     public static void addEnvironment(PEnvironment environment) {
@@ -62,33 +35,32 @@ public final class GameController {
         GameController.currentEnvironment = currentEnvironment;
     }
 
-    public static void runCurrentEnvironment() throws Exception {
+    public static void runCurrentEnvironment(){
         history.get(currentEnvironment).add((PEnvironment)environments.get(currentEnvironment).deepCopy());
         environments.get(currentEnvironment).run();
     }
 
-    public static List<PCollider> checkInCircle(PVector origin, int radius) throws Exception {
-        SysCollision sys = (SysCollision) environments.get(currentEnvironment).getSystems().stream().
-                filter(system -> system instanceof SysCollision).collect(Collectors.toList()).get(0);
-        if(sys == null) throw new Exception("Current environment has no SysCollision");
+    public static List<PCollider> scanInShapeArea(PVector origin, PShape shape){
+        PSysCollision sys = (PSysCollision) environments.get(currentEnvironment)
+                .getSystems().stream().
+                filter(system -> system instanceof PSysCollision)
+                .toList().get(0);
 
-        PEnvironment env = environments.get(currentEnvironment);
+        if(sys == null) return new ArrayList<>();
+
+        PEnvironment curEnv = environments.get(currentEnvironment);
 
         PEntity tempEnt = new PEntity(origin);
-        PColliderGeneric tempColl = new PColliderGeneric(tempEnt, new PCircle(radius));
-        env.addEntity(tempEnt);
+        PColliderGeneric tempColl = new PColliderGeneric(tempEnt, shape);
 
-        List<Pair<PCollider, PCollider>> pairs =
-                env.components.stream().map(component ->
-                        new Pair<PCollider, PCollider>(tempColl, (PCollider) component)).collect(Collectors.toList());
-        //sys.isColliding lancia un eccezione, quindi non posso usare le stream
-        List<PCollider> collidingColliders = new ArrayList<>();
-        for (Pair<PCollider, PCollider> pair: pairs) {
-            if(sys.isColliding(pair))
-                collidingColliders.add(pair.getSecond());
-        }
-
-        return collidingColliders;
+        return curEnv.components.stream().map(component ->
+                        new Pair<PCollider, PCollider>(tempColl, (PCollider) component))
+                .filter(PSysCollision::isColliding)
+                .map(Pair::second)
+                .collect(Collectors.toList());
+    }
+    public static List<PCollider> scanInRoundArea(PVector origin, int radius){
+        return scanInShapeArea(origin, new PCircle(radius));
     }
 
     public static void stepBackCurrentEnvironment() {
